# PluginFramework

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
include/Modular/: HostBase.h  Interfaces.h  Library.h  Plugin.h  PluginManager.h
install/: PluginFrameworkConfig.cmake.in
install/clang-debug/include/Modular/: Library.h  PluginManager.h
install/clang-debug/lib/cmake/LibraryLoader/: LibraryLoaderConfig.cmake  LibraryLoaderTargets-debug.cmake  LibraryLoaderTargets.cmake
install/mingw-debug/include/Modular/: HostBase.h  Interfaces.h  Library.h  Plugin.h  PluginManager.h
src/Modular/: Library.cpp
tests/: TestService.h  main.cpp  mod.cpp  mod.h
